package PresentationLayer.CLIs;

public interface CommandInterface {
   void execute();
}